[gd_scene load_steps=2 format=3 uid="uid://cw6y7yvx4syvn"]

[ext_resource type="Script" uid="uid://dof7tvihnhjrc" path="res://battle.gd" id="1_ip7xm"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ip7xm")

[node name="Player" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.088
anchor_top = 0.296
anchor_right = 0.247
anchor_bottom = 0.579
offset_left = -0.376007
offset_top = 0.192001
offset_right = 72.456
offset_bottom = 72.808
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="Player"]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.1
anchor_top = -0.1
anchor_right = 1.1
anchor_bottom = 1.1
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.117647)

[node name="Enemy" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.672
anchor_top = 0.30679
anchor_right = 0.896083
anchor_bottom = 0.625
offset_left = -0.144043
offset_top = 0.199982
offset_right = -2.28809
offset_bottom = 50.0
expand_mode = 2
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Enemy"]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.1
anchor_top = -0.1
anchor_right = 1.1
anchor_bottom = 1.1
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.117647)

[node name="PlayerVictoryButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.104167
anchor_top = 0.820988
anchor_right = 0.277833
anchor_bottom = 0.905519
offset_right = -0.0640001
offset_bottom = 0.224
text = "Player Victory
"
metadata/_edit_use_anchors_ = true

[node name="AttackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0434028
anchor_top = 0.820988
anchor_right = 0.166722
anchor_bottom = 0.905519
offset_right = -0.0640001
offset_bottom = 0.224
text = "Attack!!!
"
metadata/_edit_use_anchors_ = true

[node name="DefenseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.173611
anchor_top = 0.820988
anchor_right = 0.296931
anchor_bottom = 0.905519
offset_right = -0.0640001
offset_bottom = 0.224
text = "Defense"
metadata/_edit_use_anchors_ = true

[node name="EnemyVictoryButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.694444
anchor_top = 0.813272
anchor_right = 0.868111
anchor_bottom = 0.897802
offset_right = -0.0640001
offset_bottom = 0.224
text = "Enemy Victory
"
metadata/_edit_use_anchors_ = true

[node name="DiceLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.739
anchor_top = -3.973
anchor_right = 1.739
anchor_bottom = -3.973
offset_left = -1318.44
offset_top = 2825.5
offset_right = -1190.44
offset_bottom = 2950.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50

[node name="DiceLabel2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.75046
anchor_top = -3.973
anchor_right = 1.75046
anchor_bottom = -3.973
offset_left = -1127.44
offset_top = 2825.5
offset_right = -999.44
offset_bottom = 2950.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
metadata/_edit_use_anchors_ = true

[node name="playerHealth" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.365867
anchor_top = 0.625432
anchor_right = 0.440158
anchor_bottom = 0.731543
offset_left = -0.232025
offset_top = -0.279999
offset_right = 0.447968
offset_bottom = -0.0400085
theme_override_font_sizes/font_size = 50
metadata/_edit_use_anchors_ = true

[node name="enemyHealth" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.541908
anchor_top = 0.625432
anchor_right = 0.6162
anchor_bottom = 0.731543
offset_left = -0.232025
offset_top = -0.279999
offset_right = 0.447968
offset_bottom = -0.0400085
theme_override_font_sizes/font_size = 50
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="PlayerVictoryButton" to="." method="_on_player_victory_button_pressed"]
[connection signal="pressed" from="AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="DefenseButton" to="." method="_on_defense_button_pressed"]
[connection signal="pressed" from="EnemyVictoryButton" to="." method="_on_enemy_victory_button_pressed"]
